@@ -32,7 +32,8 @@ algebraic multiplicities.
 
 *  Move definitions and results for triangular matrices.
 Definitions UTM and LTM move from Section OD to Section MO,
-with new Example ULTM.
+with new Example ULTM.  Theorem NTM new in Section MO,
+describes nonsingular triangular matrices.
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -45,6 +46,7 @@ New: Theorem SID, dimensions of intersection and sum of subspaces
 New: Exercise PD.T60, alternate solution using Theorem SID
 New: Theorem ESM, formalizing an eigenvalue discussion
 New: Example ULTM, examples of triangular matrices
+New: Theorem NTM, nonsingular triangular matrices
 New: Example UE, unknown eigenvalues
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
